icon and title fixed, side heading links alignment  is fixed, hamburger icon is fixed and media query added for mobile also, side image made for mobile

--- a/src/components/AdminLogin.css
+++ b/src/components/AdminLogin.css
@@ -141,3 +141,12 @@ span.icon-span {
     outline: none !important;
     box-shadow: none !important;
 }
+
+ @media (max-width:800px) {
+    .image-container {
+        display: none;
+    }
+} 
+.login-wrapper{
+    border-radius: 20px;
+}
